# bluetooth_audio_receiver

./: Cargo.toml  build.rs  resources.rc
src/: bluetooth_receiver.rs  main.rs  updater.rs  utils.rs
